Chanegs for college

--- a/src/main/java/ph/adamw/nnt3/gui/gui.fxml
+++ b/src/main/java/ph/adamw/nnt3/gui/gui.fxml
@@ -9,11 +9,8 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
@@ -74,21 +71,7 @@
                   <ListView layoutX="15.0" layoutY="43.0" prefHeight="475.0" prefWidth="200.0" />
           </children>
         </AnchorPane>
-            <BorderPane prefHeight="553.0" prefWidth="711.0" style="-fx-padding: 40px;">
-               <center>
-                  <GridPane fx:id="grid" gridLinesVisible="true" BorderPane.alignment="CENTER">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-                    </rowConstraints>
-                  </GridPane>
-               </center></BorderPane>
+            <BorderPane fx:id="borderPane" prefHeight="553.0" prefWidth="711.0" style="-fx-padding: 40px;" />
          </children>
       </HBox>
     <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" style="-fx-background-color: rgba(0,0,0,0.1);">
