--- a/src/main/resources/ph/adamw/nnt3/gui/gui.fxml
+++ b/src/main/resources/ph/adamw/nnt3/gui/gui.fxml
@@ -36,7 +36,7 @@
   ~ SOFTWARE.
   -->
 
-<BorderPane fx:id="borderPane" prefHeight="760.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.adamw.nnt3.gui.GUIController">
+<BorderPane fx:id="borderPane" prefHeight="760.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.adamw.nnt3.gui.GuiController">
    <left>
       <VBox prefHeight="400.0" prefWidth="260.0" style="-fx-alignment: top-center;" BorderPane.alignment="CENTER">
          <children>
@@ -51,7 +51,7 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
       </Label>
-            <ListView prefHeight="560.0" prefWidth="260.0" />
+            <ListView fx:id="mazerListView" onMouseClicked="#mazerListViewClicked" prefHeight="560.0" prefWidth="260.0" />
          </children>
       </VBox>
    </left>
@@ -61,9 +61,9 @@
    <bottom>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="100.0" prefWidth="520.0" style="-fx-alignment: center;">
+            <VBox fx:id="evolutionControlsBox" prefHeight="100.0" prefWidth="520.0" style="-fx-alignment: center;">
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+                  <HBox fx:id="genZeroConfigBox" prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
                      <children>
                         <TextField fx:id="generationSizeField" promptText="Generation Size">
                            <HBox.margin>
@@ -81,7 +81,7 @@
                         <TextField fx:id="hiddenLayersSizeField" promptText="Hidden Layers Size" />
                      </children>
                   </HBox>
-                  <Button mnemonicParsing="false" onAction="#onStartPress" text="Start Generation 0" />
+                  <Button fx:id="nextGenButton" mnemonicParsing="false" onAction="#onNextGenPressed" text="Run Generation 0" />
                </children>
             </VBox>
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
