--- a/src/main/resources/ph/adamw/nnt3/gui/gui.fxml
+++ b/src/main/resources/ph/adamw/nnt3/gui/gui.fxml
@@ -81,11 +81,25 @@
                         <TextField fx:id="hiddenLayersSizeField" promptText="Hidden Layers Size" />
                      </children>
                   </HBox>
-                  <Button fx:id="nextGenButton" mnemonicParsing="false" onAction="#onNextGenPressed" text="Run Generation 0" />
+                  <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
+                     <children>
+                        <Button fx:id="nextGenButton" mnemonicParsing="false" onAction="#onNextGenPressed" text="Run Generation 0">
+                           <HBox.margin>
+                              <Insets right="4.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="skipGenerationsButton" onAction="#onSkipGensPressed" disable="true" mnemonicParsing="false" text="Skip 10 Generations">
+                           <HBox.margin>
+                              <Insets right="4.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button disable="true" mnemonicParsing="false" text="-" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
             <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-            <VBox prefHeight="200.0" prefWidth="347.0" style="-fx-alignment: center;">
+            <VBox fx:id="gridSizeControlsBox" prefHeight="200.0" prefWidth="347.0" style="-fx-alignment: center;">
                <children>
                   <HBox prefHeight="100.0" prefWidth="520.0" style="-fx-alignment: center;">
                      <children>
