--- a/src/main/resources/ph/adamw/amazer/gui/error.fxml
+++ b/src/main/resources/ph/adamw/amazer/gui/error.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
 <!--
   ~ MIT License
@@ -29,14 +30,21 @@
   ~ SOFTWARE.
   -->
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="70.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.adamw.amazer.gui.ErrorController">
-   <top>
-      <Label fx:id="errorText" text="BIG ERROR" BorderPane.alignment="CENTER" />
-   </top>
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="114.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.adamw.amazer.gui.ErrorGuiController">
    <bottom>
-      <Button mnemonicParsing="false" onAction="#continueButtonPressed" text="Continue" BorderPane.alignment="CENTER" />
+      <Button mnemonicParsing="false" onAction="#continueButtonPressed" text="Continue" BorderPane.alignment="CENTER_RIGHT" />
    </bottom>
    <padding>
-      <Insets bottom="10.0" top="10.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <center>
+      <Label fx:id="errorText" alignment="TOP_LEFT" prefHeight="126.0" prefWidth="292.0" text="It seems a_mazer was unable to locate your mainframe detection service." wrapText="true" BorderPane.alignment="TOP_LEFT" />
+   </center>
+   <top>
+      <Label fx:id="errorTitle" text="Failed to initialise the mainframe!" BorderPane.alignment="CENTER_LEFT">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+   </top>
 </BorderPane>
