--- a/src/main/resources/ph/adamw/amazer/gui/main.fxml
+++ b/src/main/resources/ph/adamw/amazer/gui/main.fxml
@@ -4,13 +4,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <!--
@@ -41,13 +44,10 @@
    <left>
       <VBox prefHeight="400.0" prefWidth="260.0" style="-fx-alignment: top-center;" BorderPane.alignment="CENTER">
          <children>
-      <Label alignment="CENTER" minWidth="60.0" style="-fx-alignment: center;" text="Current Generation" textAlignment="CENTER">
+      <Label alignment="CENTER" minWidth="60.0" style="-fx-alignment: center;" text="Current Generation" textAlignment="CENTER" textFill="#9f9f9f">
         <font>
           <Font size="18.0" />
         </font>
-        <textFill>
-          <Color blue="0.624" green="0.624" red="0.624" />
-        </textFill>
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin>
@@ -64,24 +64,6 @@
          <children>
             <VBox fx:id="evolutionControlsBox" prefHeight="100.0" prefWidth="539.0" style="-fx-alignment: center;">
                <children>
-                  <HBox fx:id="genZeroConfigBox" prefHeight="100.0" prefWidth="200.0" style="-fx-alignment: center;">
-                     <children>
-                        <TextField fx:id="generationSizeField" promptText="Generation Size">
-                           <HBox.margin>
-                              <Insets right="4.0" />
-                           </HBox.margin>
-                        </TextField>
-                        <TextField fx:id="hiddenLayersAmountField" promptText="Hidden Layers">
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <HBox.margin>
-                              <Insets right="4.0" />
-                           </HBox.margin>
-                        </TextField>
-                        <TextField fx:id="hiddenLayersSizeField" promptText="Hidden Layers Size" />
-                     </children>
-                  </HBox>
                   <HBox prefHeight="100.0" prefWidth="544.0" style="-fx-alignment: center;">
                      <children>
                         <Button fx:id="nextGenButton" mnemonicParsing="false" onAction="#onNextGenPressed" text="Run Generation 0">
@@ -94,7 +76,7 @@
                               <Insets right="4.0" />
                            </HBox.margin>
                         </Button>
-                        <Slider fx:id="skipGenerationsSlider" disable="true" majorTickUnit="100.0" max="500.0" minorTickCount="50" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="100.0" />
+                        <Slider fx:id="skipGenerationsSlider" disable="true" majorTickUnit="100.0" max="500.0" minorTickCount="50" prefHeight="38.0" prefWidth="222.0" showTickLabels="true" snapToTicks="true" value="100.0" />
                      </children>
                   </HBox>
                </children>
@@ -121,17 +103,23 @@
       </HBox>
    </bottom>
    <top>
-      <HBox fillHeight="false" prefHeight="20.0" prefWidth="200.0" style="-fx-background-color: rgba(0,0,0,0.1);" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" onAction="#onExportMazePressed" text="Export Maze">
-               <HBox.margin>
-                  <Insets right="4.0" />
-               </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#onImportMazePressed" text="Import Maze" />
-         </children>
-         <padding>
-            <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
-         </padding></HBox>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#onImportMazePressed" text="Import Maze" />
+                  <MenuItem mnemonicParsing="false" onAction="#onExportMazePressed" text="Export Maze" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem mnemonicParsing="false" onAction="#onExportEvolutionPressed" text="Export Current Evolution" />
+                  <MenuItem mnemonicParsing="false" onAction="#onLoadEvolutionPressed" text="Load New/Saved Evolution" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#onAboutMenuPressed" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
    </top>
 </BorderPane>
