--- a/src/main/resources/ph/adamw/amazer/gui/main.fxml
+++ b/src/main/resources/ph/adamw/amazer/gui/main.fxml
@@ -86,14 +86,38 @@
                <children>
                   <HBox prefHeight="100.0" prefWidth="520.0" style="-fx-alignment: center;">
                      <children>
-                        <TextField fx:id="gridColsField" promptText="Grid Columns">
+                        <VBox prefHeight="200.0" prefWidth="9999.0" style="-fx-alignment: center;" VBox.vgrow="ALWAYS">
+                           <children>
+                              <TextField fx:id="gridColsField" editable="false" prefHeight="27.0" prefWidth="100.0">
+                                 <VBox.margin>
+                                    <Insets right="2.0" />
+                                 </VBox.margin></TextField>
+                              <Slider fx:id="gridColsSlider" blockIncrement="6.0" majorTickUnit="6.0" max="48.0" min="6.0" showTickLabels="true" showTickMarks="true" value="6.0">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin></Slider>
+                           </children>
                            <HBox.margin>
-                              <Insets right="4.0" />
-                           </HBox.margin></TextField>
-                        <TextField fx:id="gridRowsField" promptText="Grid Rows" />
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <VBox layoutX="217.0" layoutY="10.0" prefHeight="200.0" prefWidth="9999.0" style="-fx-alignment: center;" VBox.vgrow="ALWAYS">
+                           <children>
+                              <TextField fx:id="gridRowsField" editable="false">
+                                 <VBox.margin>
+                                    <Insets left="2.0" />
+                                 </VBox.margin></TextField>
+                              <Slider fx:id="gridRowsSlider" blockIncrement="6.0" majorTickUnit="6.0" max="48.0" min="6.0" showTickLabels="true" showTickMarks="true" value="6.0">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin></Slider>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </VBox>
                      </children>
                   </HBox>
-                  <Button mnemonicParsing="false" onAction="#onUpdateGridPressed" text="Update Grid" />
                </children>
             </VBox>
          </children>
@@ -103,7 +127,7 @@
       </HBox>
    </bottom>
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
